--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@turf/union": "6.3.0",
     "leaflet": "1.7.1",
     "vue": "^3.0.5"
   },
