Add URLs to release documents

--- a/src/mock-database/releases/2013-release.json
+++ b/src/mock-database/releases/2013-release.json
@@ -3,6 +3,7 @@
   "type": "RELEASE",
   "creator": "TR",
   "name": "Sacred East (Added in update 3)",
+  "url": "https://www.tamriel-rebuilt.org/about/project-history",
   "startDate": "2012-06-06T08:13.000Z",
   "docCreatedDate": "2012-06-06T08:13.000Z",
   "releaseDate": "2013-08-08T09:29:00.000Z",
