--- a/src/mock-database/releases/sacred-east.json
+++ b/src/mock-database/releases/sacred-east.json
@@ -3,6 +3,7 @@
   "type": "RELEASE",
   "creator": "TR",
   "name": "Sacred East",
+  "url": "https://www.tamriel-rebuilt.org/about/project-history",
   "startDate": "2008-11-31T00:00.000Z",
   "docCreatedDate": "2008-11-31T00:00.000Z",
   "releaseDate": "2012-06-06T08:13.000Z",
