--- a/src/mock-database/quest-claims/seven-seas-too-many.json
+++ b/src/mock-database/quest-claims/seven-seas-too-many.json
@@ -1,14 +1,14 @@
 {
-  "id":"fff1--c3a886ba-846e-4e5f-b011-ff0fc9db1d95",
+  "id":"fff1c3a886ba-846e-4e5f-fffffffasdfjjf0fc9db1d95",
   "docCreatedDate": "2019-07-02T01:00:00.000Z",
   "type":"CLAIM",
   "url":"https://www.tamriel-rebuilt.org/claims/battle-bards",
-  "cells":[{"x":39, "y":-42}],
+  "cells": [{"x":44,"y":-40},{"x":43,"y":-41},{"x":44,"y":-42},{"x":46,"y":-42},{"x":43,"y":-39},{"x":46,"y":-39},{"x":45,"y":-39}],
     "claimType":"QUEST",
-    "name":"Revenge of the Dreughmora",
+    "name":"Seven seas too many",
     "updates":[
       {"newClaimStatus":"NOT_STARTED","changeDate":"2019-07-02T01:00:00.000Z"},
       {"newClaimStatus":"IN_PROGRESS","changeDate":"2019-07-03T01:00:00.000Z"},
-      {"newClaimStatus":"DONE","changeDate":"2019-07-04T01:00:00.000Z"}
+      {"newClaimStatus":"DONE","changeDate":"2019-07-08T01:00:00.000Z"}
     ]
 }
